# git_tutorial

./: hello.txt
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sbatch  main.cpp  run.sbatch  test.sbatch
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/logs/: .gitignore
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/scripts/: build.sh  run.sh  test.sh
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/src/: CMakeLists.txt  model.cpp  module.cpp  tensor.cpp
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/src/include/: functions.hpp  kernel.cu  kernel.h  model.h  module.h  schedules.hpp  tensor.h
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/test/: CMakeLists.txt  functionality.cpp
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/test/test_ckpt/: conv2d_input.npy  downs.0.0.block.0.bias.npy  downs.0.0.block.0.weight.npy  downs.0.0.in_conv.bias.npy  downs.0.0.in_conv.weight.npy  downs.0.2.conv.bias.npy  downs.0.2.conv.weight.npy  downsample_output.npy  init_conv.bias.npy  init_conv.weight.npy  psample_input.npy  psample_output.npy  unet_input.npy  unet_output.npy  unnormalize_input.npy  unnormalize_output.npy  upsample_input.npy  upsample_output.npy
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/test/test_model_ckpt/: downs.0.0.block.0.bias.npy  downs.0.0.block.0.weight.npy  downs.0.0.block.1.bias.npy  downs.0.0.block.1.weight.npy  downs.0.0.block.3.bias.npy  downs.0.0.block.3.weight.npy  downs.0.0.block.4.bias.npy  downs.0.0.block.4.weight.npy  downs.0.0.in_conv.bias.npy  downs.0.0.in_conv.weight.npy  downs.0.0.mlp.1.bias.npy  downs.0.0.mlp.1.weight.npy  downs.0.1.block.0.bias.npy  downs.0.1.block.0.weight.npy  downs.0.1.block.1.bias.npy  (+271 more)
OneDrive/바탕 화면/대학/임시설/diffusion_cuda_hw6/utils/: e2e_check.py  img_convert.py
(+10 files in other folders)
